Part code to show EndOfShowPane past end; more cleaning monitor stuff.